Cria footer no index.html e no style.css

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .container {
@@ -80,4 +80,31 @@ select {
     seletor vá a 100% (até o final do elemento) e volte 10px */
     background-position-y: center;
     /* No eixo y do elemento, quero que ele fique centralizado */
+}
+
+footer {
+    background-color: #202121;
+    padding:40px;
+    text-align: center;
+}
+
+.profile-picture {
+    width: 160px;
+}
+
+.about {
+    color:white;
+    display:inline-block;
+    max-width: 40%;
+    margin-left: 40px;
+    text-align: left;
+}
+
+.about h2, .about p {
+    margin-bottom: 20px;
+}
+
+.about h2 {
+    text-transform: none;
+    font-size: 1.3em;
 }
